--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -1,6 +1,10 @@
 # This is a basic workflow to help you get started with Actions
 
 name: Simple-Flask-App
+env:
+  env1: test1
+  env2: test2
+
 on:
   push:
     branches: [ main ]
@@ -16,6 +20,6 @@ jobs:
     steps:
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo Hello, world!; echo env1
 
 
