--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -28,5 +28,8 @@ jobs:
           
       - name: List working dir
         run: ls -la
+      
+      - name: Clone git repo
+        uses: actions/checkout@v1
 
 
